src/objects/Bank_Key__c.object
<CustomObject>
    <description>Custom object holding the list of bank keys mapped to the bank name and country. Records on this table will be looked up from the Bank Details object and filtered by country so that the end user cannot pick an invalid bank key for the country.</description>
    <fields>
        <fullName>Bank_City__c</fullName>
        <label>Bank City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Street__c</fullName>
        <label>Bank Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_key_external_ID__c</fullName>
        <externalId>true</externalId>
        <label>Bank key external ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWIFT__c</fullName>
        <label>SWIFT</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Bank Key</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Keys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>